[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A command-line tool for string substitutions"
homepage = "https://github.com/sharkdp/sub"
license = "MIT/Apache-2.0"
name = "sub"
readme = "README.md"
repository = "https://github.com/sharkdp/sub"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2"
regex = "1"
tempfile = "3"
atty = "0.2"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"

[profile.release]
lto = true
codegen-units = 1
